# cropcare

CropCareAI/: app.py  gemini_service.py  main.py  models.py  plant_disease_detector.py  pyproject.toml
CropCareAI/attached_assets/: detection_results.json  main.py  pyproject.toml
CropCareAI/static/css/: main.css
CropCareAI/static/js/: main.js
CropCareAI/templates/: 404.html  500.html  base.html  chat.html  history.html  index.html
